GCW-3537 fixed UI issues for tablet-screen

--- a/app/styles/_my_dashboard.scss
+++ b/app/styles/_my_dashboard.scss
@@ -1,5 +1,11 @@
 .my_dashboard, .my_orders {
 
+  @media #{$medium-only} {
+    &.row {
+      margin: 0 !important;
+    }
+  }
+
   @media #{$large-up} {
     &.row {
       max-width: 800px;
