:lipstick: GCW-3646-Create card component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -45,5 +45,6 @@
 @import "components/quantity-widget";
 @import "components/add-request";
 @import "components/go_to_top_button";
+@import "components/order-cards";
 @import "components/select-appointment-date";
 @import "ember_offline";
