--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -1,5 +1,3 @@
-$sidebar-width: 7.8rem;
-
 .left-small{
   border-right:none;
 }
@@ -28,31 +26,41 @@ $sidebar-width: 7.8rem;
     height: inherit;
     background-color: $white;
     a {
-      display: block;
+      display: flex;
       text-transform: uppercase;
       color: $white;
       text-decoration: none;
       border-bottom: none !important;
 
+      &:hover {
+        background-color: transparent;
+      }
+
       i {
         color: $white;
         font-size: 1.5rem;
         @media #{$small-only} {
-          font-size: 1.8rem;
+          margin-left: 1rem;
+          margin-top: 0.4rem;
+        }
+      }
+      .multi-line-description {
+        padding-top: 0.1rem;
+        @media #{$small-only} {
+         padding-top: 0.5rem;
         }
       }
       label, div {
-        padding: 0;
-        color: $white;
-        font-size: 0.6rem;
+        text-align: initial;
+        padding-top: 0.6rem;
+        padding-left: .6rem;
+        font-size: 0.7rem;
         text-transform: uppercase;
         @media #{$small-only} {
-          font-size: 1rem;
-          padding-left: 0.5rem;
+          padding-top: 0.8rem;
         }
       }
       &.menu-1 {
-        display: block;
         background-color: $coral-red;
         font-size: 1.5rem;
       }
@@ -62,7 +70,7 @@ $sidebar-width: 7.8rem;
       }
       &.menu-3 {
         background-color: $light-blue;
-        font-size: 2rem;
+        font-size: 1.7rem;
       }
       &.menu-4 {
         background-color: $smokey-blue;
@@ -71,6 +79,20 @@ $sidebar-width: 7.8rem;
       &.menu-5 {
         background-color: $smokey-grey;
         font-size: 2rem;
+      }
+      &.menu-6 {
+        color: black;
+        font-size: 2rem;
+        i {
+          color: black;
+        }
+      }
+      &.menu-7 {
+        color: black;
+        font-size: 2rem;
+        i {
+          color: black;
+        }
       }
     }
 
@@ -174,8 +196,11 @@ $sidebar-width: 7.8rem;
 }
 .move-right {
   .left-off-canvas-menu {
-    width: $sidebar-width;
+    width: 8.6rem;
     box-shadow: -4px 0 4px rgba(0, 0, 0, 0.5), 4px 0 4px rgba(0, 0, 0, 0.5);
+    @media #{$small-only}{
+      width: 7.8rem;
+    }
   }
   > .inner-wrap {
     -ms-transform: none;
@@ -184,7 +209,7 @@ $sidebar-width: 7.8rem;
     -ms-transform: none;
     -o-transform: none;
     transform: none;
-    margin-left: $sidebar-width;
+    margin-left: 7.8rem;
   }
   .exit-off-canvas {
     background: rgba(0, 35, 89, 0.2);
@@ -195,7 +220,7 @@ $sidebar-width: 7.8rem;
 
 .move-left {
   .right-off-canvas-menu {
-    width: $sidebar-width;
+    width: 7.8rem;
     box-shadow: -4px 0 4px rgba(0, 0, 0, 0.5), 4px 0 4px rgba(0, 0, 0, 0.5);
   }
   > .inner-wrap {
