--- a/app/styles/components/_order-cards.scss
+++ b/app/styles/components/_order-cards.scss
@@ -8,34 +8,39 @@
 
   @media #{$small-only} {
     display: flex;
+    flex-flow: row;
     text-align: center;
     height: 100px;
     margin-right: unset;
-    margin-top: 0.7rem;
+    margin-top: 1.2rem;
     width: unset;
    }
 
   .view{
-    display: flex;
-    justify-content: space-around;
+    @media #{$small-only} {
+      display: flex;
+      > *{
+        margin-right: 0.4rem;
+      }
+
+    }
+  }
+
+  #about{
+    font-size: 10px;
   }
 
   .tiles{
+    order: 2;
     padding: 12.8px;
-  }
-
-  .small-tiles{
-    padding: 10px;
-    @media #{$small-only} {
-      display: unset !important;
-    }
-
   }
 
   p{
     margin-top: 0.3rem;
     margin-bottom: 0.7rem;
+    font-size: 20px;
     @media #{$small-only} {
+      font-size: 1rem;
         margin-top: unset;
         margin-bottom: 0.3rem;
     }
@@ -46,7 +51,7 @@
     width:100%;
     @media #{$small-only} {
       height: 100%;
-      width: 45%;
+      width: 39%;
       object-fit: fill;
     }
   }
