--- a/app/templates/components/order-cards.hbs
+++ b/app/templates/components/order-cards.hbs
@@ -1,19 +1,20 @@
 <div class="orders-card">
-  <div class="tiles show-for-medium-up">
-    <i>{{fa-icon icon prefix=prefix}}</i>
-    {{#link-to route}}
-      <p style="font-size: 20px">{{t title}}</p>
-    {{/link-to}}
-    <p style="font-size: 10px;">{{t subtitle}}  {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </p>
-  </div>
-  <img src= {{src}} alt="Picture">
-  <div class="small-tiles show-for-small">
+  <div class="tiles">
     <div class="view">
-      <i>{{fa-icon icon prefix=prefix}}</i>
+    <i>{{fa-icon icon prefix=prefix}}</i>
+    {{#if route}}
       {{#link-to route}}
-        <p style="">{{t title}}</p>
+        <p>{{t title}}</p>
       {{/link-to}}
+    {{else}}
+      {{#book-appointment as |appointment|}}
+        <a {{action appointment.clickItem}}>
+          <p>{{t title}}</p>
+        </a>
+      {{/book-appointment}}
+    {{/if}}
     </div>
-    <p style="font-size: 10px;">{{t subtitle}}  {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </p>
+    <p id="about">{{t subtitle}}  {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </p>
   </div>
+  <img src= {{src}} alt="Picture" loading="lazy">
 </div>
