:globe_with_meridians: GCW-3646-Added chinese translation

--- a/app/templates/components/order-cards.hbs
+++ b/app/templates/components/order-cards.hbs
@@ -14,7 +14,12 @@
       {{/book-appointment}}
     {{/if}}
     </div>
-    <p id="about">{{t subtitle}}  {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </p>
+    <p id="about">
+      {{t subtitle}}
+      {{#link-to "about"}}
+        {{t 'home.learn_more'}}
+      {{/link-to}}
+    </p>
   </div>
   <img src= {{src}} alt="Picture" loading="lazy">
 </div>
