--- a/app/templates/_cart_truck_icon.hbs
+++ b/app/templates/_cart_truck_icon.hbs
@@ -1,4 +1,4 @@
-<i class="fa cart-icon {{if isCartCountExceeded 'max-cart-count' ''}}">{{fa-icon 'truck' }}</i>
+<i class="fa cart-icon {{if isCartCountExceeded 'max-cart-count' ''}}">{{fa-icon 'shopping-cart' }}</i>
 <span class="cart unread">
   <div class="unread_length">{{cartLength}}</div>
 </span>
