--- a/app/templates/cart_content/_full_view.hbs
+++ b/app/templates/cart_content/_full_view.hbs
@@ -1,6 +1,6 @@
 <div class="cart-controls">
   <p id="messageBoxText">
-    <i class="fa">{{fa-icon 'truck'}}</i> {{t "cart_content.your_request"}}
+    <i class="fa">{{fa-icon 'shopping-cart'}}</i> {{t "cart_content.your_request"}}
   </p>
   <div class="row">
     <div class="small-6 columns">
