--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -50,7 +50,7 @@
     <div class="row show-for-small video">
       <a href={{youtubeVideo}}>
         <i>{{fa-icon "play-circle" prefix="far" size="2x"}}</i>
-        <img src='assets/images/mobile-bg.jpg' loading="lazy">
+        <img src='assets/images/mobile-bg.jpg'alt="Picture" >
       </a>
       <div class="intro">
         {{ t "home.mobile_introduction" }}
