--- a/app/templates/components/order-cards.hbs
+++ b/app/templates/components/order-cards.hbs
@@ -21,5 +21,5 @@
       {{/link-to}}
     </p>
   </div>
-  <img src= {{src}} alt="Picture" loading="lazy">
+  <img src= {{src}} alt="Picture">
 </div>
