--- a/app/templates/components/small-cart-toggle-view.hbs
+++ b/app/templates/components/small-cart-toggle-view.hbs
@@ -1,7 +1,7 @@
 {{#if (is-or screenresize.isSmallScreen screenresize.isMediumScreen)}}
 
 <div class="show_cart_summary" {{action "toggleCartSummary"}}>
-  <i class="fa cart-icon">{{fa-icon 'truck'}}</i>
+  <i class="fa cart-icon">{{fa-icon 'shopping-cart'}}</i>
   {{t 'order.cart_details.cart_summary'}}
   {{#if showCartSummary}}
   {{ fa-icon 'angle-double-up'}}
