:lipstick: GCW-3646-QA-issues-fixed

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -97,11 +97,10 @@
     }
 
     li.links {
-      bottom: 0;
       position: absolute;
       padding-bottom: 2rem;
       text-align: center;
-      font-size: 0.6rem;
+      font-size: 0.69rem;
       width: 100%;
 
       .line {
@@ -113,7 +112,7 @@
         a {
           text-decoration: underline;
           text-transform: capitalize;
-          color: #a3aab6;
+          color: #5d5d5d;
           display: inline;
           padding: 0;
           margin: 0 0.4rem;
