--- a/app/styles/components/_order-cards.scss
+++ b/app/styles/components/_order-cards.scss
@@ -16,6 +16,11 @@
     width: unset;
    }
 
+   @media #{$medium-only} {
+    height: 250px;
+    width: 150px;
+   }
+
   .view{
     @media #{$small-only} {
       display: flex;
