--- a/app/styles/_my_dashboard.scss
+++ b/app/styles/_my_dashboard.scss
@@ -53,12 +53,34 @@
 
   .tabs.tab-icons {
     margin-top: 0.6rem;
+    border-bottom: 1px solid $light-blue;
+    z-index: 100;
+    color: $tabbar-menu-icon-color;
+    padding-bottom: .6rem;
+    font-size: 0.8rem;
 
     i {
       font-size: 1.5rem;
+      display: block;
     }
 
-    z-index: 100;
+    a {
+      color: $tabbar-menu-icon-color !important;
+    }
+
+    .tab.columns {
+      .active {
+        color: $white !important;
+
+        i {
+          color: $white !important;
+        }
+      }
+    }
+
+    span.tab-unread-count {
+      margin-left: -1rem;
+    }
   }
 
   .tabs.tab-name {
@@ -74,5 +96,4 @@
   .row {
     margin: 0 auto;
   }
-
 }
