--- a/app/templates/my_bookings.hbs
+++ b/app/templates/my_bookings.hbs
@@ -5,12 +5,12 @@
     <div class="content">
       <div class="row">
         <div class="columns browse button-container small-7 large-6 medium-7">
-          {{#link-to "browse"}}
-          <div class="browse-button button light">
-            <i class="fa">{{fa-icon 'shopping-cart'}}</i>
-            {{t 'home.order_goods.action'}}
+          {{#book-appointment prevPath="my_bookings" as |appointment|}}
+          <div class="browse-button button light" {{action appointment.clickItem}}>
+            <i class="fa">{{fa-icon 'calendar-alt'}}</i>
+            Create New Booking
           </div>
-          {{/link-to}}
+          {{/book-appointment}}
         </div>
         <div class="columns booking button-container small-4 large-6 medium-4">
           {{#link-to "about" class="learn-link"}}
