fetch data using shared reource

--- a/app/templates/my_dashboard/_my_dashboard_tabs.hbs
+++ b/app/templates/my_dashboard/_my_dashboard_tabs.hbs
@@ -21,7 +21,7 @@
   </div>
 
   <div class="small-3 orders tab columns text-center">
-    {{#link-to 'my_orders'}}
+    {{#link-to 'my_offer_responses'}}
       <i class="fa dashboard-menu item-menu">{{fa-icon 'hand-paper'}}</i>
       Direct from Donors
     {{/link-to}}
