GCW-3666 fetch offer-response, offers and packages

--- a/app/templates/my_dashboard/_my_dashboard_tabs.hbs
+++ b/app/templates/my_dashboard/_my_dashboard_tabs.hbs
@@ -21,9 +21,8 @@
   </div>
 
   <div class="small-3 orders tab columns text-center">
-    {{#link-to 'my_orders'}}
-      <i class="fa dashboard-menu item-menu">{{fa-icon 'hand-paper'}}</i>
-      Direct from Donors
+    {{#link-to 'my_offer_responses'}}
+      {{shared-offers-icon}}
     {{/link-to}}
   </div>
 
