--- a/app/styles/_my_dashboard.scss
+++ b/app/styles/_my_dashboard.scss
@@ -96,4 +96,54 @@
   .row {
     margin: 0 auto;
   }
+
+  .donor-offers-heading {
+    padding: 1rem 0.5rem;
+    font-size: 0.8rem;
+  }
+
+  .shared-offers-list {
+    .order_body .field {
+      padding-left: 0.8rem;
+      opacity: 1;
+    }
+
+    img {
+      padding: 0 0 0.5rem;
+    }
+
+    .unread_message {
+      margin-top: 0.3rem;
+      margin-left: 1.5rem;
+    }
+
+    .order_body {
+      padding-bottom: 0;
+    }
+
+    .offer-header {
+      .response-status {
+        padding: 0;
+        text-align: right;
+
+        .response-text {
+          padding-right: 0.5rem;
+        }
+
+        .response-icon {
+          float: right;
+          width: 2.5rem;
+          text-align: center;
+
+          &.available {
+            background-color:#438BCA;
+          }
+
+          &.closed {
+            background-color: black;
+          }
+        }
+      }
+    }
+  }
 }
