--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -19,7 +19,9 @@
         width: 100%;
         margin-top: 1.25rem;
         margin-bottom: 1.25rem;
-        font-size: 0.8em;
+        font-size: 0.7rem;
+        padding-left: 0;
+        padding-right: 0;
 
         @media #{$large-only} {
           width: 80%;
