--- a/app/templates/offers/_offers_tabs.hbs
+++ b/app/templates/offers/_offers_tabs.hbs
@@ -1,26 +1,25 @@
-    <div class="title show-for-medium-up">
-    <div class="large-1 medium-1 columns">
-      {{notification-icon}}
-    </div>
-    <div style="padding-right:4rem;">
-      {{t "shareableOffers.respond_to_offer"}} {{model.id}}
-    </div>
+<div class="title show-for-medium-up">
+  <div class="large-1 medium-1 columns">
+    {{notification-icon}}
   </div>
+  <div style="padding-right:4rem;">
+    {{t "shareableOffers.respond_to_offer"}} {{model.id}}
+  </div>
+</div>
+
 <div class="row tabs tab-icons">
-  {{#link-to 'offers.detail' model.public_uid tagName="div" classNames="small-6 orders tab columns text-center"}}
-    <i class="fa dashboard-menu item-menu">{{fa-icon 'list'}}</i>
-  {{/link-to}}
+  <div class="small-6 orders tab columns text-center">
+    {{#link-to 'offers.detail' uid tagName="div" classNames="orders tab text-center"}}
+      <i class="fa dashboard-menu item-menu">{{fa-icon 'list'}}</i>
+      {{t 'messages.offer_details'}}
+    {{/link-to}}
+  </div>
 
-  {{#link-to 'offers.messages' model.id  (query-params uid=model.public_uid) tagName="div" classNames="small-6 account tab columns text-center"}}
+  <div class="small-6 orders tab columns text-center">
+    {{#link-to 'offers.messages' model.id (query-params uid=uid) tagName="div" classNames="tab columns text-center"}}
     <i class="fa dashboard-menu item-menu">{{fa-icon 'comments' }}</i>
-  {{/link-to}}
-</div>
-<div class="row tabs tab-name active-tab">
-  {{#link-to 'offers.detail' model.public_uid tagName="div" classNames="small-6 orders tab active-tab columns text-center item-menu"}}
-    {{t 'messages.offer_details'}}
-  {{/link-to}}
-
-  {{#link-to 'offers.messages' model.id (query-params uid=model.public_uid) tagName="div" classNames="small-6 account active-tab tab columns text-center item-menu"}}
     {{t 'messages.your_response'}}
-  {{/link-to}}
+    {{/link-to}}
+  </div>
 </div>
+
