:sparkles: GCW-3664-Added changes for share offer details feature

--- a/app/templates/components/offers-block.hbs
+++ b/app/templates/components/offers-block.hbs
@@ -4,7 +4,7 @@
     {{t "shareableOffers.offered"}}
     {{display-datetime validDate format="preset:timeago"}}
   </span>
-  {{#link-to "offers.detail" record.public_uid class="right underline-link view_offer"}}
+  {{#link-to "offers.messages"record.id (query-params uid=record.public_uid ) class="right underline-link view_offer"}}
     {{t "shareableOffers.view_offer"}}
   {{/link-to}}
 </div>
