--- a/app/templates/offers/messages.hbs
+++ b/app/templates/offers/messages.hbs
@@ -1,11 +1,84 @@
+<nav class="tab-bar category_page hide-for-small">
+  <section class='left-samll'style="float: left;padding-top:0.6rem;">
+    {{#back-link fallbackRoute="/" }}
+        {{fa-icon "angle-left"}} {{t "back"}}
+    {{/back-link}}
+  </section>
+  <section class='main-section ui'>
+    <div align="center" class="title">{{t "shareableOffers.respond_to_offer"}} {{model.id}}</div>
+  </section>
+</nav>
+
+<div class="row offers my_orders offer_share_details">
+  <div class="small-12 columns content">
+    {{#if showOfferShareDetails}}
+      <div class="offer_details_button" {{action (mut showOfferShareDetails) false}}>
+        Hide offer details
+      </div>
+      <div class="offer_view" >
+        <span style="color: white;">
+          {{t "shareableOffers.offer_instruction"}} :
+        </span>
+        <span>
+          {{#if (is-and (is-equal session.language "zh-tw") shareableoffer.public_notes_zh_tw)}}
+            {{apply-line-break shareableoffer.public_notes_zh_tw}}
+          {{else if shareableoffer.public_notes}}
+            {{apply-line-break shareableoffer.public_notes}}
+          {{else}}
+            {{t "shareableOffers.no_description_available"}}
+          {{/if}}
+        </span>
+      </div>
+      <section class="main-section category-items-list">
+        <ul>
+          {{#each shareableoffer.items as |item|}}
+            <div class="row items">
+              {{item-thumbnail-view item=item displayItemOverlay=true}}
+            </div>
+            <hr>
+          {{/each}}
+        </ul>
+      </section>
+    {{else}}
+      <div class="offer_details_button" {{action (mut showOfferShareDetails) true}}>
+        Show offer details
+      </div>
+      <div class="image-tab">
+        {{#each shareableoffer.items as |item index|}}
+          {{#if (is-or (is-equal index 1) (is-equal index 0))}}
+            <div style="margin-left:0.4rem ;">{{cloudinary-image-tag src=item.previewUrl}}</div>
+          {{/if}}
+        {{/each}}
+      </div>
+      <div class="offer_view offer_instructor">
+        <span style="color: white;">
+          {{t "shareableOffers.offer_instruction"}} :
+        </span>
+      </div>
+    {{/if}}
+  </div>
+</div>
+
+<div class="row my orders display_message_text">
+  <div class="small-12 columns content messages">
+    <i class="fa">{{fa-icon 'info-circle'}}</i>
+    <span style="margin-top: 0.8rem;">
+      {{#if isChatVisible}}
+        Please use the chat below to communicate with Goodcity's staff about your interest in this offer.
+      {{else}}
+        This offer is no longer accepting request. Check other available Offer
+      {{/if}}
+    </span>
+  </div>
+</div>
+
 <div class="row my_orders">
   <div class="small-12 columns content">
     <div class="order-summary">
-      {{partial 'offers/offers_tabs'}}
-
       <div class="tab-content-messaging">
         <div class="messaging-tab">
-          {{#if isStaffMember}}
+          <hr>
+          {{#if (is-or isStaffMember (is-not isChatVisible))}}
             <div class="row permission-error-container">
               <div class="small-1 columns warning-icon">
                 {{fa-icon "ban"}}
@@ -15,62 +88,64 @@
               </span>
             </div>
           {{else}}
-            <section class="message-section">
-              <div class="row">
-                <div class="small-12 columns">
-                  {{#each sortedMessages as |message|}}
-                    {{#if message.isMessage}}
-                      <div class="ellipsis {{message.state}} {{if message.myMessage 'my_message' 'received_message'}}"
-                        id={{message.id}}>
-                        <div class='message_details'>
-                          {{#if message.myMessage}}
-                          {{t 'messages.you'}}
-                          {{else}}
-                          <i class="fa user-icon">{{fa-icon 'user-circle' size="2x"}}</i>
-                          {{t "full_name" firstName=message.sender.firstName lastName=message.sender.lastName}}
-                          {{message.sender.roleInitials}}
-                          {{/if}}
-                          →
-                          {{display-datetime message.createdAt format="HH:mm"}}
-                        </div>
+            {{#if isChatVisible}}
+              <section class="message-section">
+                <div class="row">
+                  <div class="small-12 columns">
+                    {{#each sortedMessages as |message|}}
+                      {{#if message.isMessage}}
+                        <div class="ellipsis {{message.state}} {{if message.myMessage 'my_message' 'received_message'}}"
+                          id={{message.id}}>
+                          <div class='message_details'>
+                            {{#if message.myMessage}}
+                            {{t 'messages.you'}}
+                            {{else}}
+                            <i class="fa user-icon">{{fa-icon 'user-circle' size="2x"}}</i>
+                            {{t "full_name" firstName=message.sender.firstName lastName=message.sender.lastName}}
+                            {{message.sender.roleInitials}}
+                            {{/if}}
+                            →
+                            {{display-datetime message.createdAt format="HH:mm"}}
+                          </div>
 
-                        {{{apply-line-break message.parsedBody}}}
+                          {{{apply-line-break message.parsedBody}}}
+                        </div>
+                      {{/if}}
+                    {{/each}}
+                  </div>
+                </div>
+              </section>
+              <div class="message-footer">
+                <div class="btm message-form">
+                  <div class="row message-textbar">
+                    {{#if displayChatNote}}
+                    <div class="row">
+                      <div class="small-12 columns chat_note">
+                        <i class="fa info-icon">{{fa-icon 'info-circle'}}</i>
+                        {{t 'messages.chat_note'}}
                       </div>
+                    </div>
                     {{/if}}
-                  {{/each}}
-                </div>
-              </div>
-            </section>
-            <div class="message-footer">
-              <div class="btm message-form">
-                <div class="row message-textbar">
-                  {{#if displayChatNote}}
-                  <div class="row">
-                    <div class="small-12 columns chat_note">
-                      <i class="fa info-icon">{{fa-icon 'info-circle'}}</i>
-                      {{t 'messages.chat_note'}}
-                    </div>
-                  </div>
-                  {{/if}}
-                  <div class="row message-base">
-                    <div class="small-12 columns">
-                      {{#validatable-form class="form-horizontal" onSubmit=(action 'sendMessage') as |form|}}
-                      <div class="row ui">
-                        <div class="small-9 large-10 medium-9 columns">
-                          {{variable-height-textarea value=body name="body" required="true"  parentDiv="message-section"}}
+                    <div class="row message-base">
+                      <div class="small-12 columns">
+                        {{#validatable-form class="form-horizontal" onSubmit=(action 'sendMessage') as |form|}}
+                        <div class="row ui">
+                          <div class="small-9 large-10 medium-9 columns">
+                            {{variable-height-textarea value=body name="body" required="true"  parentDiv="message-section"}}
+                          </div>
+                          <div class="small-3 large-2 medium-3 columns">
+                            {{#online-button classNames="button" onClick=(action "sendMessage") actionArgs=true}}
+                            {{t 'messages.send'}}
+                            {{/online-button}}
+                          </div>
                         </div>
-                        <div class="small-3 large-2 medium-3 columns">
-                          {{#online-button classNames="button" onClick=(action "sendMessage") actionArgs=true}}
-                          {{t 'messages.send'}}
-                          {{/online-button}}
-                        </div>
+                        {{/validatable-form}}
                       </div>
-                      {{/validatable-form}}
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
+            {{/if}}
           {{/if}}
         </div>
       </div>
