--- a/app/styles/_my_dashboard.scss
+++ b/app/styles/_my_dashboard.scss
@@ -79,6 +79,8 @@
     }
 
     span.tab-unread-count {
+      margin-right: -2.5rem;
+      position: absolute;
       margin-left: -1rem;
     }
   }
