--- a/app/templates/authenticate.hbs
+++ b/app/templates/authenticate.hbs
@@ -37,7 +37,11 @@
 
           <div class="row">
             <div class="small-12 columns">
-              <label class="form-label">{{t "_resend.no_sms"}} <a href="#" class="auth_links" {{action "resendPin" }} id="resend-pin">{{t "_resend.resend"}}</a></label>
+              <label class="form-label">{{t "_resend.no_sms"}} <a href="#"  disabled={{pinAlreadySent}} class="auth_links" {{action "resendPin" }} id="resend-pin" style={{if pinAlreadySent "pointer-events:none;opacity:0.4"}}>{{t "_resend.resend"}}</a>
+              {{#if pinAlreadySent}}
+                ({{t "_resend.try_again" timer=timer}})
+              {{/if}}
+              </label>
 
               <ul>
                 {{#if loginParamEmail}}
