--- a/app/styles/components/_logo-banner.scss
+++ b/app/styles/components/_logo-banner.scss
@@ -2,17 +2,13 @@
   width: 100%;
   display: none;
   z-index: 3;
-  position: fixed;
-  bottom: 0;
+  position: absolute;
 
   @media #{$medium-up} {
     &.desktop {
       display: block;
-      position: fixed;
-      margin-top: 30px;
-      margin-bottom: 2px;
       .content {
-        padding-left: 6rem;
+       max-width: 760px;
       }
     }
   }
