:package: Address suggestion for shared offers page

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -28,7 +28,7 @@
           <p>{{ t "home.introduction" }}</p>
           <p style="margin-top: 1.5rem;">
             {{#link-to "about"}}{{ t "home.faq_text" }}{{/link-to}}
-            <a href={{youtubeVideo}}>{{ t "home.introduction_video" }}&nbsp;<i>{{fa-icon "play-circle" prefix="far"}}</i></a>
+            <a href={{crossroadsCharityYoutubeVideo}}>{{ t "home.introduction_video" }}&nbsp;<i>{{fa-icon "play-circle" prefix="far"}}</i></a>
           </p>
         </div>
       </div>
@@ -55,7 +55,7 @@
        <p>{{ t "home.introduction" }}</p>
           <p style="margin-top: 1.5rem;">
             {{#link-to "about"}}{{ t "home.faq_text" }}{{/link-to}}
-            <a href={{youtubeVideo}}>{{ t "home.introduction_video" }}&nbsp;<i>{{fa-icon "play-circle" prefix="far"}}</i></a>
+            <a href={{crossroadsCharityYoutubeVideo}}>{{ t "home.introduction_video" }}&nbsp;<i>{{fa-icon "play-circle" prefix="far"}}</i></a>
           </p></div>
     </div>
   </div>
