--- a/app/templates/offers/messages.hbs
+++ b/app/templates/offers/messages.hbs
@@ -68,7 +68,7 @@
 <div class="row my orders display_message_text">
   <div class="small-12 columns content messages">
     <i class="fa">{{fa-icon 'info-circle'}}</i>
-    <span style="margin-top: 0.8rem;margin-left: 25%;margin-right: 25%;">
+    <span>
       {{#if isChatVisible}}
         Please use the chat below to communicate with Goodcity's staff about your interest in this offer.
       {{else}}
