--- a/app/styles/templates/_offers.scss
+++ b/app/styles/templates/_offers.scss
@@ -134,6 +134,12 @@
     display: flex;
     flex-direction:column
   }
+
+  span{
+    margin-top: 0.8rem;
+    margin-left: 25%;
+    margin-right: 25%;
+  }
 }
 
 .disable {
