--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -26,7 +26,7 @@
       <div class="row">
         <div class="small-12 columns show-for-medium-up video-box">
           <p>{{ t "home.introduction" }}</p>
-          <p style="margin-top: 1.5rem;">
+          <p class="youtube-text">
             {{#link-to "about"}}{{ t "home.faq_text" }}{{/link-to}}
             <a href={{crossroadsCharityYoutubeVideo}}>{{ t "home.introduction_video" }}&nbsp;<i>{{fa-icon "play-circle" prefix="far"}}</i></a>
           </p>
@@ -53,7 +53,7 @@
        <img src='assets/images/mobile-bg.jpg'alt="Picture" >
         <div class="intro">
        <p>{{ t "home.introduction" }}</p>
-          <p style="margin-top: 1.5rem;">
+          <p class="youtube-text">
             {{#link-to "about"}}{{ t "home.faq_text" }}{{/link-to}}
             <a href={{crossroadsCharityYoutubeVideo}}>{{ t "home.introduction_video" }}&nbsp;<i>{{fa-icon "play-circle" prefix="far"}}</i></a>
           </p></div>
