--- a/app/styles/_order_block.scss
+++ b/app/styles/_order_block.scss
@@ -107,6 +107,7 @@
     position: relative;
     padding-top: 1em;
     padding-bottom: 1.2rem;
+    min-height: 3rem;
 
     .row {
       margin-bottom: 0.5em;
