--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -43,7 +43,7 @@
         </span>
       </div>
       {{#link-to "offers.messages"model.id (query-params uid=uid) class="right underline-link view_offer view_message"}}
-        {{t "shareableOffers.view_offer"}}
+        {{t "shareableOffers.respond_offer"}}
       {{/link-to}}
     </div>
 
