:recycle: Change locales and other structures in code

--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -5,7 +5,7 @@
     {{/back-link}}
   </section>
   <section class='main-section ui'>
-    <div align="center" class="title">{{t "shareableOffers.respond_to_offer"}} {{model.id}}</div>
+    <div align="center" class="title">{{t "shareableOffers.offer_details"}} {{model.id}}</div>
   </section>
 </nav>
 
