:zap: Fix scrolling issue in browse home page for smaller screens

--- a/app/styles/components/_logo-banner.scss
+++ b/app/styles/components/_logo-banner.scss
@@ -19,6 +19,7 @@
       display: block;
       position: fixed;
       margin-left: -2rem;
+      z-index: 5;
       bottom: 0;
       .content {
         width: 100%;
