--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -15,13 +15,15 @@
     <ul>
       <li>
         {{#link-to "offers"}}
-          See all available offers
+          <u>See all available offers</u>
         {{/link-to}}
       </li>
-      <li>
+      <li style="color: white;">
+        Visit your
         {{#link-to "my_orders"}}
-          Visit your dashboard to see any offers you have responded to already
+          <u>dashboard</u>
         {{/link-to}}
+        to see any offers you have responded to already
       </li>
     </ul>
   </div>
