--- a/app/styles/templates/_home.scss
+++ b/app/styles/templates/_home.scss
@@ -32,7 +32,8 @@
       justify-content: space-around;
 
       @media #{$small-only} {
-        display: block;;
+        display: block;
+        margin-left: inherit;
        }
     }
 
@@ -40,6 +41,7 @@
       padding-right: unset;
     }
     @media #{$small-only} {
+      z-index: 4;
      margin-top: 9rem;
     }
   }
